Increased max width of mobile format to fix bug with name overlapping.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3182,7 +3182,7 @@ body.is-touch .poptrox-popup .closer {
 
 /* Medium */
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1100px) {
 
 	/* Basic */
 
